Адаптивная графика каталога

--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -1,5 +1,5 @@
 .additional-products {
-  padding: 0 0 32px;
+  padding: 0 0 35px;
 
   @media (min-width: $tablet-width) {
     padding: 0 0 76px;
@@ -12,7 +12,6 @@
 
 .additional-products__title {
   position: relative;
-
 
   display: inline-flex;
   margin: 0 0 35px;
@@ -31,25 +30,37 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 75px;
+    margin: 0 0 78px;
     padding: 0 36px;
 
-    &::after {
-
+    &::after,
+    &::before {
       top: 20px;
     }
 
     &::before {
-
       content: "";
       position: absolute;
-      top: 20px;
       right: 100%;
 
       width: 100vw;
       height: 2px;
 
       background-color: $green-400;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 81px;
+    padding: 0 34px 0 0;
+
+    &::before {
+      right: calc(100% + 40px);
+    }
+
+    &::after,
+    &::before {
+      top: 23px;
     }
   }
 }
@@ -63,7 +74,7 @@
 }
 
 .additional-products__list {
-  margin: 0 0 32px;
+  margin: 0 0 39px;
 
   @media (min-width: $tablet-width) {
     margin: 0 0 69px;
@@ -72,7 +83,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 73%;
+    width: 73.4%;
     margin: 0;
 
     border-right: none;
@@ -83,39 +94,30 @@
 .additional-products__item {
   position: relative;
 
-  padding: 13px 0 19px;
+  padding: 13px 0 18px;
 
-  &::before,
-  &::after {
-    @include decor-pseudo-border;
-  }
+  border-bottom: 1px solid $grey-500;
 
-  &::before {
-    left: 50%;
-  }
-
-  &::after {
-    right: 50%;
+  &:first-child {
+    border-top: 1px solid $grey-500;
   }
 
   @media (min-width: $tablet-width) {
-    padding: 27px 37px;
+    padding: 26px 37px;
 
-    border-bottom: 1px solid $grey-500;
+    &:first-child {
+      border-top: none;
+    }
 
     &:last-child {
       border: none;
-    }
-
-    &::before,
-    &::after {
-      display: none;
     }
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    padding: 15px 0 17px;
+    padding: 15px 0 16px;
   }
 }
