--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -135,4 +135,12 @@
       margin: 0 75px 0 0;
     }
   }
+
+  @media (min-width: $desktop-width) {
+    &--theme-healthy {
+      &::after {
+        right: 15px;
+      }
+    }
+  }
 }
