--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -38,7 +38,7 @@
 
   &--secondary {
     width: 100%;
-    padding: 7px 25px;
+    padding: 20px 25px;
 
     font-size: 16px;
     line-height: 20px;
@@ -46,7 +46,7 @@
 
     background-color: $grey-400;
 
-    @media (min-width: $tablet-width) {
+    @media (min-width: $mobile-tablet-width) {
       padding: 10px 30px;
     }
   }
