--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,6 +4,10 @@
   justify-content: space-between;
   padding: 28px 0 26px;
 
+  &--padding {
+    padding: 43px 0 11px;
+  }
+
   &--special-padding {
     padding: 34px 0 20px;
   }
