--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -1,25 +1,40 @@
 .gift {
   width: 100%;
-  height: 289px;
-  padding: 65px 60px 36px;
+  min-height: 289px;
+  padding: 30px;
 
   text-align: center;
 
   background-color: $green-400;
-  background-image: url("../img/gift-background-mobile.jpg");
+  background-image: url("../img/gift-background_mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
-    align-items: center;
-    height: 200px;
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/gift-background_mobile@2x.jpg");
+  }
 
-    background-image: url("../img/gift-background-tablet.jpg");
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    text-align: left;
+    min-height: 200px;
+
+    background-image: url("../img/gift-background_tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/gift-background_tablet@2x.jpg");
+    }
   }
 
   @media (min-width: $desktop-width) {
     width: 245px;
+    height: 100%;
+
+    background-image: url("../img/gift-background_desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/gift-background_desktop@2x.jpg");
+    }
   }
 }
 
@@ -27,7 +42,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
+  margin: 27px auto 0;
+  max-width: 161px;
 
   font-size: 16px;
   line-height: 20px;
@@ -39,7 +55,7 @@
 
     width: 78px;
     height: 80px;
-    margin: 0 0 48px;
+    margin: 0 0 50px;
 
     background-image: url("../img/icon_gift.svg");
     background-repeat: no-repeat;
@@ -48,10 +64,13 @@
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
     flex-direction: row;
-
+    justify-content: space-between;
+    align-items: center;
+    max-width: 85%;
+    margin: 30px 95px 0 48px;
 
     &::before {
-      margin: 0 165px 0 0;
+      margin: 0;
     }
   }
 }
