--- a/source/sass/blocks/main-product.scss
+++ b/source/sass/blocks/main-product.scss
@@ -1,11 +1,14 @@
 .main-product {
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
 
   @media (min-width: $mobile-tablet-width) {
-    $background-translate-y: 100px;
-    align-items: flex-start;
+    $background-translate-y: 81px;
+
     justify-content: center;
+    align-items: flex-start;
+
     text-align: center;
 
     background-image: linear-gradient(to top, $grey-400 calc(100% - #{$background-translate-y}), transparent calc(100% - #{$background-translate-y}), transparent 100%);
@@ -14,26 +17,35 @@
 
 .main-product__info-content {
   width: 50%;
-  padding: 0 0 9px;
+
 
   @media (min-width: $mobile-tablet-width) {
     width: 100%;
     margin: 0 0 33px;
     padding: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 35px;
+  }
 }
 
 .main-product__title {
-  margin: 0 0 18px;
+  margin: 0 0 15px;
 
   text-transform: uppercase;
 
   @media (min-width: $mobile-tablet-width) {
-    margin: 0 0 21px;
+    max-width: 150px;
+    margin: 0 auto 16px;
 
     br {
       display: none;
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto 19px;
   }
 }
 
@@ -47,35 +59,53 @@
 
 .main-product__link-img {
   order: -1;
-  align-self: center;
   width: 50%;
+  min-height: 112px;
 
   text-align: center;
 
   @media (min-width: $mobile-tablet-width) {
-    margin: 0 0 34px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    min-height: 208px;
+    margin: 0 0 33px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 198px;
+    margin: 0 0 44px;
   }
 }
 
 .main-product__img {
+  margin: 11px 0 0;
+
   vertical-align: bottom;
 
-  @media (min-width: $mobile-tablet-width) {
-    width: 128px;
-    height: 156px;
+  &--special-margin {
+    margin: 26px 0 0;
   }
 
-  @media (min-width: $tablet-width) {
-    width: 168px;
-    height: 206px;
+  @media (min-width: $mobile-tablet-width) {
+    margin: 0;
+
+    &--special-margin {
+      margin: 0;
+    }
   }
 }
 
 .main-product__button {
+  order: 1;
   align-self: flex-end;
-  margin: 13px 0 0;
+  margin: 12px 0 0;
+  padding: 10px 25px;
 
   @media (min-width: $mobile-tablet-width) {
     margin: 0;
+
+    font-size: 16px;
   }
 }
