--- a/source/sass/blocks/product-desc.scss
+++ b/source/sass/blocks/product-desc.scss
@@ -1,6 +1,8 @@
 .product-desc {
   font-size: 12px;
   line-height: 16px;
+  border-spacing: 0;
+
 
   @include format-product-desc;
 }
@@ -14,4 +16,8 @@
     font-size: 16px;
     border-bottom: 1px solid $grey-500;
   }
+}
+
+.product-desc__data {
+  padding: 0;
 }
