--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -16,7 +16,7 @@
   @media (min-width: $tablet-width) {
     position: relative;
 
-    padding: 40px 0 526px;
+    padding: 0 0 528px;
 
     text-align: left;
     color: $black-400;
@@ -25,12 +25,14 @@
   }
 
   @media (min-width: $desktop-width) {
+    position: static;
+
     padding: 0;
 
     &::before {
       content: "";
       position: absolute;
-      bottom: 0;
+      top: 0;
       left: 50%;
       z-index: -1;
 
@@ -59,7 +61,8 @@
     position: relative;
 
     margin: 0 0 0 80px;
-    padding: 83px 700px 185px 0;
+    padding: 83px 700px 0 0;
+    min-height: 554px;
   }
 }
 
