--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -107,11 +107,21 @@
   font-size: 16px;
   line-height: 20px;
 
+  cursor: pointer;
+
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
 
     border-bottom: 1px dotted rgba($black-400, 0.26);
+
+    &:hover {
+      border-bottom-style: solid;
+    }
+
+    &:active {
+      border: none;
+    }
   }
 }
 
@@ -154,6 +164,8 @@
 .slider__toggle {
   display: none;
 
+  cursor: pointer;
+
   @media (min-width: $tablet-width) {
     position: absolute;
     top: -14px;
@@ -166,6 +178,15 @@
     background-color: $white-400;
     border: 1px solid $grey-500;
     border-radius: 50%;
-    box-shadow: inset 0 0 0 12px $white-400, inset 0 0 0 16px $green-400;
+    box-shadow: inset 0 0 0 12px $white-400, inset 0 0 0 16px $green-400, 0 1px 3px rgba($black-400, 0.16);
+
+    &:hover {
+      box-shadow: inset 0 0 0 12px $white-400, inset 0 0 0 16px $green-400, 0 2px 4px rgba($black-400, 0.19);
+    }
+
+    &:active {
+      border: 1px solid $green-400;
+      box-shadow: inset 0 0 0 12px $white-400, inset 0 0 0 16px $green-400, 0 3px 5px rgba($black-400, 0.2);
+    }
   }
 }
