--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -10,8 +10,9 @@
       &::before,
       &::after {
         @include decor-pseudo-border;
+        background-color: $grey-475;
 
-        bottom: -37px;
+        bottom: -41px;
       }
 
       &::before {
@@ -41,6 +42,10 @@
     @media (min-width: $tablet-width) {
       font-size: 20px;
       line-height: 24px;
+    }
+
+    @media (min-width: $desktop-width) {
+      line-height: 21px;
     }
   }
 
