Правки по замечаниям

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -120,6 +120,7 @@
 .form__label {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -198,12 +199,14 @@
 
 .form__input {
   position: relative;
-
+  width: 0;
   flex-grow: 1;
   padding: 12px 15px;
+  align-self: flex-start;
 
   line-height: 18px;
   font-family: inherit;
+  height: 45px;
 
   border: 1px solid $grey-350;
 
@@ -226,11 +229,8 @@
   }
 
   &:focus {
-    outline: 2px solid $grey-700;
-  }
-
-  &:disabled {
-    outline: 2px solid $grey-700;
+    outline: none;
+    box-shadow: 0 0 0 2px $grey-700;
 
     & + .form__icon {
       color: $green-400;
@@ -238,6 +238,7 @@
   }
 
   @media (min-width: $tablet-width) {
+    height: 52px;
     padding: 10px 20px;
 
     font-size: 20px;
@@ -277,7 +278,7 @@
   }
 
   &--error {
-    outline: 2px solid $red-200;
+    box-shadow: 0 0 0 2px $red-200;
 
     & + .form__icon {
       color: $red-200;
@@ -287,9 +288,10 @@
 
 .form__icon {
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 
   &--email {
-    top: 15px;
     right: 15px;
 
     width: 19px;
@@ -297,7 +299,6 @@
   }
 
   &--phone {
-    top: 12px;
     right: 13px;
 
     width: 20px;
@@ -306,24 +307,20 @@
 
   @media (min-width: $tablet-width) {
     &--email {
-      top: 19px;
       right: 17px;
     }
 
     &--phone {
-      top: 17px;
       right: 17px;
     }
   }
 
   @media (min-width: $desktop-width) {
     &--email {
-      top: 17px;
       right: 22px;
     }
 
     &--phone {
-      top: 15px;
       right: 16px;
     }
   }
@@ -384,7 +381,7 @@
 
 .form__radio:focus + .form__label-text::before,
 .form__checkbox:focus + .form__label-text::before {
-  border: 2px solid $grey-500;
+  border: 1px solid $grey-525;
 }
 
 .form__fieldset--contacts {
@@ -455,7 +452,7 @@
 
   @media (min-width: $desktop-width) {
     width: 46.5%;
-    margin: 0 74px 0 0;
+    margin: 0 79px 0 0;
   }
 }
 
