--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -127,7 +127,7 @@ $offset-background: 325px;
     line-height: 26px;
     text-align: right;
 
-    br {
+    .break {
       display: block;
     }
   }
@@ -137,7 +137,7 @@ $offset-background: 325px;
 
     text-align: left;
 
-    br {
+    .break {
       display: none;
     }
 
