--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -12,6 +12,7 @@
 }
 
 .footer__map {
+  position: relative;
   width: 100%;
   height: 362px;
 
@@ -41,6 +42,14 @@
       background-image: url("../img/map_desktop@2x.png");
     }
   }
+}
+
+.footer__map-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .footer__bottom {
