--- a/source/sass/blocks/main-product.scss
+++ b/source/sass/blocks/main-product.scss
@@ -53,12 +53,11 @@
   color: $black-300;
 
   &:hover {
-    text-shadow: 2px -2px 2px $grey-525;
-    opacity: 0.9;
+    opacity: 0.6;
   }
 
   &:active {
-    opacity: 0.7;
+    opacity: 0.3;
   }
 }
 
@@ -78,12 +77,12 @@
 
   &:hover {
     transform: scale(1.05);
-    filter: drop-shadow(10px 10px 5px rgba($black-400, 0.5)) sepia(20%);
+    filter: drop-shadow(10px 10px 5px rgba($black-400, 0.5));
   }
 
   &:active {
     transform: scale(0.9);
-    filter: drop-shadow(5px 5px 2px rgba($black-400, 0.5)) sepia(10%);
+    filter: drop-shadow(5px 5px 2px rgba($black-400, 0.5));
   }
 
   @media (min-width: $mobile-tablet-width) {
