--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -41,12 +41,14 @@ $offset-background: 325px;
   @include format-text;
 
   @media (min-width: $tablet-width) {
+    max-width: 99%;
     margin: 0 0 53px;
 
     @include format-text-tablet;
   }
 
   @media (min-width: $desktop-width) {
+    max-width: 100%;
     margin: 0 0 70px;
   }
 }
