--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -9,7 +9,7 @@
 .slider__list {
   position: relative;
 
-  margin: 0 0 22px;
+  margin: 0 0 14px;
 
   @media (min-width: $tablet-width) {
     width: 612px;
@@ -24,6 +24,7 @@
 
 .slider__item {
   @media (max-width: $mobile-width-only) {
+    height: 240px;
     display: none;
 
     &--current {
@@ -170,6 +171,12 @@
 
   background-color: $green-400;
   border-radius: 6px;
+
+  @media (max-width: $mobile-width-only) {
+    &--after {
+      width: 100%;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     width: 0;
