--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -174,7 +174,8 @@
 
   @media (max-width: $mobile-width-only) {
     &--after {
-      width: 100%;
+      position: absolute;
+      left: 46%;
     }
   }
 
